fix the edit of a paper

--- a/app/views/papers/_resources_edit.html.erb
+++ b/app/views/papers/_resources_edit.html.erb
@@ -1,38 +1,40 @@
 <% if !paper.resources.empty? %>
-  <h4>Actual resources</h4>
   <ul>
     <% paper.resources.each do |resource| %>
       <li>
         <%= link_to resource.name_link, resource.url_link %>
-        <%= link_to 'delete', paper_resource_path( paper, resource ), :method => :delete, :confirm => 'Are you sure?' %>
+        <span class="actions">
+          <%= link_to image_tag('delete.png'), paper_resource_path( paper, resource ), :method => :delete, :confirm => 'Are you sure?' %>
+        </span>
       </li>
     <% end %>
   </ul>
 <% end %>
 
-<h4>New</h4>
-<p>
-  <% form_for [paper, @resource], :html => { :multipart => :true } do |f| -%>
-    <%= f.error_messages %>
-    <p>
-      <%= f.label :name %> (could be blank)<br />
-      <%= f.text_field :name %>
-    </p>
+<br/>
 
-    <h5>use an url</h5>
-    <p>
-      <%= f.label :url %><br />
-      <%= f.text_field :url %>
-    </p>
-    
-    <h5>or upload a file</h5>
-    <p>
-      <%= f.label :file %><br />
-      <%= f.file_field :file %>
-    </p>
-    
-    <p>
-      <%= f.submit "Create" %>
-    </p>
-  <% end -%>
-</p>
+<p>You can add a new resources from here:</p>
+
+<% form_for [paper, @resource], :html => { :multipart => :true } do |f| -%>
+  <%= f.error_messages %>
+  <p>
+    <%= f.label :name, 'Name' %><br />
+    <%= f.text_field :name %>
+  </p>
+
+  <p>
+    <%= f.label :url, 'From URL' %><br />
+    <%= f.text_field :url %>
+  </p>
+  
+  <p>
+    <%= f.label :file, 'From your computer' %><br />
+    <%= f.file_field :file %>
+  </p>
+  
+  <br/>
+  
+  <p>
+    <%= f.submit "Add resource" %>
+  </p>
+<% end -%>
