--- a/app/views/papers/_status_edit.html.erb
+++ b/app/views/papers/_status_edit.html.erb
@@ -8,19 +8,23 @@
 
 <p>
   <strong><%= paper.status %></strong>
-  
+</p>
+
+<p>
   <% if admin? %>
-    go to 
+    Change to 
     <% @first_status = true %>
     <% Paper::STATUS.keys.each do |status_key| %>
       <% if @paper.status != Paper::STATUS[status_key]%>
-        <%= "or"  unless @first_status %>
+        <%= "/"  unless @first_status %>
         <% @first_status = false %>
         <%= link_to( Paper::STATUS[status_key], update_status_paper_path( paper, :status => Paper::STATUS[status_key] ), :method => 'put' ) %>
       <% end %>
     <% end %>
   <% end %>
-  
+</p>
+
+<p>
   <% if logged_in? && current_user.is_speaker_on?( paper ) && paper.status == Paper::STATUS[:ACEPTED] %>
     go to 
     <%= link_to( Paper::STATUS[:CONFIRMED], update_status_paper_path( paper, :status => Paper::STATUS[:CONFIRMED] ), :method => 'put' ) %>
