--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -1,44 +1,42 @@
 <% title "Editing Paper: #{@paper.title}" %>
 
+<h3>Editing Paper</h3>
+
 <% form_for(@paper) do |f| %>
   <%= f.error_messages %>
-
   <%= render :partial => 'papers/basic_form', :locals => { :f => f } %>
-
-  <p>
-    <%= f.submit "Update attributes above" %>
-  </p>
+  <br/>
+  <p><%= f.submit "Update attributes above" %></p>
 <% end %>
 
-<h3>Photo</h3>
-<p>You can add a photo for the talk, this can be a photo for the speakers or not,
-  something cool that make it look intesesting.</p>
-  
-<p>File types allowed: 'image/jpeg', 'image/png'. Max file size: 1MB. Width: between 150px and 1000px.
-  Height: between 150px and 1000px.</p>
-  
-<%= render :partial => 'papers/photo_edit', :locals => { :paper => @paper } %>
-
-<h3>Speakers</h3>
-<p>Here you can manage the speakers of this talk.</p>
-
-<p>Here only appear the users with public profile already registered on the app.</p>
-  
-<div id="speakers">
-  <%= render :partial => 'papers/speakers_edit', :locals => { :paper => @paper } %>
+<div class="form-block">
+  <h6>Photo</h6>
+  <p class="tip">
+    You can add a photo for the talk, this can be a photo for the speakers or not,
+    something cool that make it look intesesting.
+  </p>
+  <%= render :partial => 'papers/photo_edit', :locals => { :paper => @paper } %>
 </div>
 
-<h3>Status</h3>
-<p>This is the actual status of the talk.</p>
-<%= render :partial => 'papers/status_edit', :locals => { :paper => @paper } %>
+<div class="form-block">
+  <h6>Speakers</h6>
+  <p class="tip">Here you can manage the speakers of this talk. Only users with public are listed here.</p>
+  <div id="speakers">
+    <%= render :partial => 'papers/speakers_edit', :locals => { :paper => @paper } %>
+  </div>
+</div>
 
-<h3>Resources</h3>
-<p>Here you can manage the resources associated to this talk, like PDF, presentations, online videos, etc.</p>
+<div class="form-block">
+  <h6>Status</h6>
+  <p class="tip">This is the actual status of the talk.</p>
+  <%= render :partial => 'papers/status_edit', :locals => { :paper => @paper } %>
+</div>
 
-<p>You can choose between upload a file from your computer or indicate an URL for the resource.
-  Also you can indicate a name for the resource or leave just the URL.</p>
-  
-<%= render :partial => 'papers/resources_edit', :locals => { :paper => @paper } %>
-  
-
-<%= link_to 'Show', @paper %>
+<div class="form-block">
+  <h6>Resources</h6>
+  <p class="tip">
+    Here you can manage the resources associated to this talk, like PDF, presentations, online videos, etc.<br/>
+    You can choose between upload a file from your computer or indicate an URL for the resource.
+  </p>
+  <%= render :partial => 'papers/resources_edit', :locals => { :paper => @paper } %>
+</div>
