--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -7,3 +7,9 @@
     <%= f.submit "Create" %>
   </p>
 <% end %>
+
+<p class="notes">Fields marked with <span class="required">*</span> are required fields</p>
+
+<p>
+  <%= link_to "&laquo; Go back to rooms", @room %>
+</p>
