--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,10 +1,10 @@
-  <%= f.error_messages %>
+<%= f.error_messages %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :notes %><br />
-    <%= f.text_area :notes %>
-  </p>
+<p>
+  <%= f.label :name, "Name", :required => true %><br />
+  <%= f.text_field :name %>
+</p>
+<p>
+  <%= f.label :notes, "Notes" %><br />
+  <%= f.text_area :notes %>
+</p>
