--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,6 @@
 
     </div>
 
-    <%= render :partial => 'layouts/analitycs' %>
+    <%= render :partial => 'layouts/analytics' %>
   </body>
 </html>
