--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <%= f.label :capacity, "Capacity", :required => true %><br />
+  <%= f.text_field :capacity %>
+</p>
+
+<p>
   <%= f.label :description, "Description" %><br />
   <%= f.text_area :description %>
 </p>
