--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <head xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>EuRuKo 2009 - <%= yield(:title) || "European Ruby Conference" %></title>
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <%= stylesheet_link_tag 'reset', :media => 'screen, projection' %>
     <%= stylesheet_link_tag 'screen', :media => 'screen, projection' %>
