--- a/app/views/system_mailer/cart_purchased_ok_to_user.html.erb
+++ b/app/views/system_mailer/cart_purchased_ok_to_user.html.erb
@@ -5,7 +5,7 @@ We have receive your purcharse for the events:
 
 With this invoice info:
 
-<%= simple_format @cart.invoice_info %>
+<%= @cart.invoice_info %>
 
 Your purcharse ID is: <%= @cart.id %>
 
