--- a/app/views/system_mailer/cart_purchased_ok_to_admin.html.erb
+++ b/app/views/system_mailer/cart_purchased_ok_to_admin.html.erb
@@ -10,13 +10,15 @@ New purcharse.
   * <%= event.name %>
 <% end -%>
 
-<% if !@cart.invoice_info.blank? %>
+<%- if !@cart.invoice_info.blank? %>
 * invoice info:
+
 <%= @cart.invoice_info %>
 <% end %>
 
 <% if !@cart.paypal_notify_params[:memo].blank? %>
 * memo:
+
 <%= @cart.paypal_notify_params[:memo] %>
 <% end %>
 
