--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -9,7 +9,7 @@
       <%= link_to image_tag('register.png'), signup_path, :id => "register-button" %>
       <h5>Registration open!</h5>
       <p>We've opened the registration process for EuRuKo 2009.<br />
-      Go register yourself now, only 250 seats available!</p>
+      Go register yourself now, only <span>250</span> seats available!</p>
     </div>
   </div>
   <% end %>
