--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -53,5 +53,5 @@
     The conference is organised this year by the Spanish Ruby Users Group
     or as we like to call it <a href="http://www.srug.org">SRUG</a>.
   </p>
-  <p>You can join to the <a href="http://groups.google.es/group/euruko-spain-2009">mailing list</a>.</p>
+  <p>You can join the <a href="http://groups.google.es/group/euruko-spain-2009">mailing list</a>.</p>
 </div>
