example on invoice info

--- a/app/views/carts/new.html.erb
+++ b/app/views/carts/new.html.erb
@@ -50,7 +50,7 @@
   <br />
   
   <p>
-    <%= label_tag :invoice_info, "Invoice Info" %><br/>
+    <%= label_tag :invoice_info, "Invoice Info" %> <span class="example">Bussiness Details (Full Name, Address, VAT number, etc)</span><br/>
     <%= text_area_tag :invoice_info, @cart.invoice_info %>
   </p>
   
