--- a/app/views/system_mailer/cart_purchased_ok_to_admin.html.erb
+++ b/app/views/system_mailer/cart_purchased_ok_to_admin.html.erb
@@ -1,8 +1,8 @@
-New purcharse.
+New purchase.
 
 * id: <%= @cart.id %>
-* date create:<%= @cart.created_at %>
-* date updated:<%= @cart.updated_at %>
+* date create: <%= @cart.created_at %>
+* date updated: <%= @cart.updated_at %>
 * user: <%= @cart.user.name %>
 * status: <%= @cart.status %>
 * events: 
