--- a/app/views/system_mailer/cart_purchased_ok_to_user.html.erb
+++ b/app/views/system_mailer/cart_purchased_ok_to_user.html.erb
@@ -1,4 +1,4 @@
-We have receive your purcharse for the events:
+We have receive your purchase for the events:
 <% @cart.events.each do |event| -%>
   * <%= event.name %>
 <% end -%>
@@ -9,7 +9,7 @@ With this invoice info:
 <%= @cart.invoice_info %>
 <% end -%>
 
-Your purcharse ID is: <%= @cart.id %>
+Your purchase ID is: <%= @cart.id %>
 
 Keep it for possible issues.
 
