fixing more bug con texts

--- a/app/views/system_mailer/cart_purchased_ok_to_user.html.erb
+++ b/app/views/system_mailer/cart_purchased_ok_to_user.html.erb
@@ -1,4 +1,4 @@
-We have receive your purchase for the events:
+We have received your payment for the events:
 <% @cart.events.each do |event| -%>
   * <%= event.name %>
 <% end -%>
