--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -15,7 +15,7 @@
       <strong><%= cart.user.name %></strong>
       at <%= cart.updated_at %>
       (<%= cart.status %>)
-      <%= link_to 'toogle', '#', :onclick => "toogle_cart_div( 'cart_#{cart.id}'); return false;" %>
+      <%= link_to 'toggle', '#', :onclick => "toggle_cart_div( 'cart_#{cart.id}'); return false;" %>
     </p>
 
     <div id="cart_<%= cart.id %>" class="box" style="display:none;">
@@ -67,7 +67,7 @@
 </div>
 
 <script>
-  function toogle_cart_div( id ){
+  function toggle_cart_div( id ){
     $( '#' + id ).slideToggle( 'fast' );
     return false;
   }
