--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,7 +11,7 @@
   <p><%= f.label :name, "Name", :required => true %> <span class="example">Jorge Perez</span><br/>
   <%= f.text_field :name %></p>
 
-  <p><%= f.label :text, "Text" %> <span class="example">http://my-company.com</span><br/>
+  <p><%= f.label :text, "Text" %> <span class="example">Tell us something about you</span><br/>
   <%= f.text_area :text %></p>
   
   <p><%= f.label :avatar, "Avatar" %><br/>
