info about avatar

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,7 +15,7 @@
   <%= f.text_area :text %></p>
   
   <p><%= f.label :avatar, "Avatar" %><br/>
-  If you are looking where you can set your avatar look here:
+  If you are looking where you can set your avatar, look here:
   <%= link_to 'Gravatar', 'http://gravatar.com', :title => 'Gravatar, globally recognized avatar', :target => '_blank' %></p>
     
   <p><%= f.label :location_name, "Your City/Town" %> <span class="example">Madrid, Spain</span><br/>
