--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -15,17 +15,7 @@
     at <%= @paper.room.nil? ? '(not room designed yet)' : @paper.room.name %>
   </h6>
 
-<% if !@paper.speakers.empty? -%>
-  <p>
-    By
-    <% counter = @paper.speakers.size %>
-    <% @paper.speakers.collect{ |s| s.user }.each do |user| %>
-      <%= counter > 1 && counter < @paper.speakers.size ? "," : "and" unless counter >= @paper.speakers.size %>
-      <%= link_to user.name, user %>
-      <% counter -= 1 %>
-    <% end %>
-  </p>
-<% end -%>
+  <%= render :partial => 'papers/by', :locals => { :paper => @paper } %>
 
   <%= simple_format @paper.description %>
 
