--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -19,6 +19,7 @@
 
   <%= simple_format @paper.description %>
 
+  <div class="clear"></div>
 
   <% if !@paper.resources.empty?  %>
   <div id="resources">
