sorry i forgot to switch to design, add logos and some tweaks

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -17,6 +17,28 @@
 </div>
 
 <div class="spot">
+  <h3>Sponsorship <%= link_to 'Get info', 'http://euruko2009.org/files/sponsorship_EuRuKo_2009.pdf' %></h3>
+  
+  <div class="sponsor">
+    <a href="http://www.linkingpaths.com" title="Linking Paths"><%= image_tag 'sponsors/linking-paths.png' %></a><br/>
+    <p><a href="http://www.linkingpaths.com" title="Linking Paths">Linking Paths</a></p>
+  </div>
+  <div class="sponsor">
+    <a href="http://www.guebs.com" title="Guebs.com"><%= image_tag 'sponsors/guebs.png' %></a><br/>
+    <p><a href="http://www.guebs.com" title="Guebs.com">Güebs</a></p>
+  </div>
+  <div class="sponsor">
+    <a href="http://www.aspgems.com" title="ASPgems"><%= image_tag 'sponsors/aspgems.png' %></a><br/>
+    <p><a href="http://www.aspgems.com" title="ASPgems">ASPgems</a></p>
+  </div>
+  <div class="sponsor">
+    <a href="http://www.citilab.eu" title="Citilab"><%= image_tag 'sponsors/citilab.png' %></a><br/>
+    <p><a href="http://www.citilab.eu" title="Citilab">Citilab</a></p>
+  </div>
+  <div class="clear"></div>
+</div>
+
+<div class="spot">
   <%= image_tag "twitter.png" %>
   <h3>Follow us on Twitter</h3>
   <p>
@@ -35,15 +57,6 @@
     on simplicity and productivity. It has an elegant syntax that is 
     natural to read and easy to write.
     <a href="http://www.ruby-lang.org/en/about/">More...</a>
-  </p>
-</div>
-
-<div class="spot">
-  <h3>Sponsorship</h3>
-  <p>
-    We are looking for Ruby-related companies interested in sponsoring 
-    EuRuKo 2009. More info here: 
-    <%= link_to 'Sponsorship information', 'http://euruko2009.org/files/sponsorship_EuRuKo_2009.pdf' %>
   </p>
 </div>
 
