--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -452,6 +452,11 @@ hr {
   font-size: 10px;
 }
 
+.sponsor{margin:15px 10px 0 0; padding:0;float:left;text-align:center;}
+.sponsor img{border:1px solid #777;padding:0;float: none;}
+.sponsor a{border:none;color:#111;font-size:10px;}
+.sponsor p{font-size:9px;}
+
 #ui-datepicker-div { background: #F4F4F4; padding: 2px; border: 1px solid #999; font-size: 11px; }
 #ui-datepicker-div a { border: none; }
 .ui-datepicker { width: 17em; padding: .2em .2em 0; }
@@ -488,3 +493,7 @@ hr {
     width: 200px; /*must have*/
     height: 200px; /*must have*/
 }
+
+.shorten {
+  clear:both;
+  margin-bottom: 30px; }
