fix the soldout thing and the index listing one-more-time

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,8 +45,7 @@
           </div>
         </div>
         
-        <div style="clear: both;"/>
-
+        <div class="clear"></div>
       </div>
 
       <div id="footer-wrapper">
