--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -4,14 +4,7 @@
   <div id="cover"><%= image_tag 'cover.png' %></div>
 
   <% if !logged_in? %>
-  <div id="extra">
-    <div class="box">
-      <%= link_to image_tag('register.png'), signup_path, :id => "register-button" %>
-      <h5>Registration open!</h5>
-      <p>We've opened the registration process for EuRuKo 2009.<br />
-      Go register yourself now, only <span>250</span> seats available!</p>
-    </div>
-  </div>
+    <%= render :partial => "soldout" %>
   <% end %>
 <% end %>
 
@@ -38,5 +31,6 @@
     <% end %>
 
     <%= shorten(simple_format(paper.description), paper) %>
+    <div class="clear"></div>
   </div>
 <% end %>
