better spacing, bigger logos

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -248,7 +248,8 @@ hr {
   height: 90px; }
 
 .spot {
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 30px;
   clear: both; }
 
 .spot p {
