--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -4,7 +4,7 @@
   <div id="cover"><%= image_tag 'cover.png' %></div>
 
   <% if !logged_in? %>
-    <%= render :partial => "register" %>
+    <%= render :partial => "soldout" %>
   <% end %>
 <% end %>
 
