add lunar logic polska logo

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -35,6 +35,10 @@
     <a href="http://www.citilab.eu" title="Citilab"><%= image_tag 'sponsors/citilab.png' %></a><br/>
     <p><a href="http://www.citilab.eu" title="Citilab">Citilab</a></p>
   </div>
+  <div class="sponsor">
+    <a href="http://www.lunarlogicpolska.com" title="Lunar Logic Polska"><%= image_tag 'sponsors/lunar-logic-polska.png' %></a><br/>
+    <p><a href="http://www.lunarlogicpolska.com" title="Lunar Logic Polska">Lunar Logic Polska</a></p>
+  </div>
   <div class="clear"></div>
 </div>
 
