add flowers in the space logo and ameets

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -39,6 +39,14 @@
     <a href="http://www.lunarlogicpolska.com" title="Lunar Logic Polska"><%= image_tag 'sponsors/lunar-logic-polska.png' %></a><br/>
     <p><a href="http://www.lunarlogicpolska.com" title="Lunar Logic Polska">Lunar Logic Polska</a></p>
   </div>
+  <div class="sponsor">
+    <a href="http://www.ameets.com" title="Ameets"><%= image_tag 'sponsors/ameets.png' %></a><br/>
+    <p><a href="http://www.ameets.com" title="Ameets">Ameets</a></p>
+  </div>
+  <div class="sponsor">
+    <a href="http://www.flowersinspace.com" title="Flowers in the Space"><%= image_tag 'sponsors/flowers-in-the-space.png' %></a><br/>
+    <p><a href="http://www.flowersinspace.com" title="Flowers in the Space">Flowers in the Space</a></p>
+  </div>
   <div class="clear"></div>
 </div>
 
