add xing sponsor

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -19,6 +19,11 @@
 <div class="spot">
   <h3>Sponsorship <%= link_to 'Get info', 'http://euruko2009.org/files/sponsorship_EuRuKo_2009.pdf' %></h3>
   
+  
+  <div class="sponsor">
+    <a href="http://www.xing.com" title="Xing"><%= image_tag 'sponsors/xing.png' %></a><br/>
+    <p><a href="http://www.xing.com" title="Xing">Silver Sponsor: Xing</a></p>
+  </div>
   <div class="sponsor">
     <a href="http://www.linkingpaths.com" title="Linking Paths"><%= image_tag 'sponsors/linking-paths.png' %></a><br/>
     <p><a href="http://www.linkingpaths.com" title="Linking Paths">Linking Paths</a></p>
