add some silver border

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -20,7 +20,7 @@
   <h3>Sponsorship <%= link_to 'Get info', 'http://euruko2009.org/files/sponsorship_EuRuKo_2009.pdf' %></h3>
   
   
-  <div class="sponsor">
+  <div class="sponsor silver">
     <a href="http://www.xing.com" title="Xing"><%= image_tag 'sponsors/xing.png' %></a><br/>
     <p><a href="http://www.xing.com" title="Xing">Silver Sponsor: Xing</a></p>
   </div>
