--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -465,6 +465,8 @@ hr {
 .sponsor a{border:none;color:#111;font-size:10px;}
 .sponsor p{font-size:9px;}
 
+.silver img{padding:6px; background:#ddd;}
+
 #ui-datepicker-div { background: #F4F4F4; padding: 2px; border: 1px solid #999; font-size: 11px; }
 #ui-datepicker-div a { border: none; }
 .ui-datepicker { width: 17em; padding: .2em .2em 0; }
