--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -49,8 +49,8 @@
     <p><a href="http://www.ameets.com" title="Ameets">Ameets</a></p>
   </div>
   <div class="sponsor">
-    <a href="http://www.flowersinspace.com" title="Flowers in the Space"><%= image_tag 'sponsors/flowers-in-the-space.png' %></a><br/>
-    <p><a href="http://www.flowersinspace.com" title="Flowers in the Space">Flowers in the Space</a></p>
+    <a href="http://www.flowersinspace.com" title="Flowers in Space"><%= image_tag 'sponsors/flowers-in-the-space.png' %></a><br/>
+    <p><a href="http://www.flowersinspace.com" title="Flowers in Space">Flowers in Space</a></p>
   </div>
   <div class="clear"></div>
 </div>
